tests/pld-test-output/tests-Init-01_fail_semantic2/pld-compile.txt
Error in input.c.
Error variable b does not exist. On position 4:6
   "  a = b;"
          ^

Error variable a is already defined. On position 5:6
   "  int a = 5;"
          ^

2 errors generated.

return code: 1
